@@ -1,2 +1,5 @@
-# Code24H_2023
+# Code24H_2023con
 24h du code 2023
+
+
+JVM option : --add-exports java.base/sun.nio.ch=ALL-UNNAMED
